--- a/general.bib
+++ b/general.bib
@@ -1,191 +1,226 @@
+%% This BibTeX bibliography file was created using BibDesk.
+%% http://bibdesk.sourceforge.net/
+
+
+%% Created for Jonas Gruska at 2013-04-09 15:12:05 +0200 
+
+
+%% Saved with string encoding Unicode (UTF-8) 
+
+
+
 @misc{Fitch,
-author = {Kramer, Gregory and Walker, Bruce and Bonebright, Terri and Cook, Perry and Flowers, John and Miner, Nadine and Neuhoff, John},
-file = {:Users/Jonas/Library/Application Support/Mendeley Desktop/Downloaded/Kramer et al. - 1999 - The Sonification Report Status of the Field and Research Agenda.html:html},
-keywords = {icad,sonification},
-mendeley-tags = {icad,sonification},
-title = {{The Sonification Report: Status of the Field and Research Agenda}},
-year = {1999}
-}
+	Author = {Kramer, Gregory and Walker, Bruce and Bonebright, Terri and Cook, Perry and Flowers, John and Miner, Nadine and Neuhoff, John},
+	File = {:Users/Jonas/Library/Application Support/Mendeley Desktop/Downloaded/Kramer et al. - 1999 - The Sonification Report Status of the Field and Research Agenda.html:html},
+	Keywords = {icad,sonification},
+	Mendeley-Tags = {icad,sonification},
+	Title = {{The Sonification Report: Status of the Field and Research Agenda}},
+	Year = {1999}}
+
 @article{Francisco2003,
-author = {Francisco, San and Music, Electronic},
-file = {:Users/Jonas/Documents/Papers/Francisco, Music/Unknown/Francisco, Music - 2003 - East Meets Left Fourth Annual.pdf:pdf},
-pages = {64--77},
-title = {{East Meets Left : Fourth Annual}},
-year = {2003}
-}
+	Author = {Francisco, San and Music, Electronic},
+	File = {:Users/Jonas/Documents/Papers/Francisco, Music/Unknown/Francisco, Music - 2003 - East Meets Left Fourth Annual.pdf:pdf},
+	Pages = {64--77},
+	Title = {{East Meets Left : Fourth Annual}},
+	Year = {2003}}
+
 @article{Ballora2004,
-author = {Ballora, Mark and Pennycook, Bruce and Ivanov, PC},
-file = {:Users/Jonas/Documents/Papers/Ballora, Pennycook, Ivanov/Leonardo/Ballora, Pennycook, Ivanov - 2004 - Heart Rate Sonification A New Approach to Medical Diagnosis.pdf:pdf},
-journal = {Leonardo},
-number = {1},
-pages = {41--46},
-title = {{Heart Rate Sonification: A New Approach to Medical Diagnosis}},
-url = {http://www.mitpressjournals.org/doi/abs/10.1162/002409404772828094},
-volume = {37},
-year = {2004}
-}
+	Author = {Ballora, Mark and Pennycook, Bruce and Ivanov, PC},
+	File = {:Users/Jonas/Documents/Papers/Ballora, Pennycook, Ivanov/Leonardo/Ballora, Pennycook, Ivanov - 2004 - Heart Rate Sonification A New Approach to Medical Diagnosis.pdf:pdf},
+	Journal = {Leonardo},
+	Number = {1},
+	Pages = {41--46},
+	Title = {{Heart Rate Sonification: A New Approach to Medical Diagnosis}},
+	Url = {http://www.mitpressjournals.org/doi/abs/10.1162/002409404772828094},
+	Volume = {37},
+	Year = {2004},
+	Bdsk-Url-1 = {http://www.mitpressjournals.org/doi/abs/10.1162/002409404772828094}}
+
 @article{Ben-Tal2004,
-author = {Ben-Tal, O and Berger, Jonathan},
-file = {:Users/Jonas/Documents/Papers/Ben-Tal, Berger/Leonardo/Ben-Tal, Berger - 2004 - Creative Aspects of Sonification.pdf:pdf},
-journal = {Leonardo},
-number = {3},
-pages = {229--232},
-title = {{Creative Aspects of Sonification}},
-url = {http://www.mitpressjournals.org/doi/abs/10.1162/0024094041139427},
-volume = {37},
-year = {2004}
-}
+	Author = {Ben-Tal, O and Berger, Jonathan},
+	File = {:Users/Jonas/Documents/Papers/Ben-Tal, Berger/Leonardo/Ben-Tal, Berger - 2004 - Creative Aspects of Sonification.pdf:pdf},
+	Journal = {Leonardo},
+	Number = {3},
+	Pages = {229--232},
+	Title = {{Creative Aspects of Sonification}},
+	Url = {http://www.mitpressjournals.org/doi/abs/10.1162/0024094041139427},
+	Volume = {37},
+	Year = {2004},
+	Bdsk-Url-1 = {http://www.mitpressjournals.org/doi/abs/10.1162/0024094041139427}}
+
 @article{Polli2005a,
-author = {Polli, Andrea},
-file = {:Users/Jonas/Library/Application Support/Mendeley Desktop/Downloaded/Polli - 2005 - Atmospherics Weather Works Data Spatialized Meteorological Sonification Project.pdf:pdf},
-journal = {Leonardo},
-number = {1},
-pages = {31--36},
-title = {{Atmospherics / Weather Works : Data Spatialized Meteorological Sonification Project}},
-volume = {38},
-year = {2005}
-}
+	Author = {Polli, Andrea},
+	File = {:Users/Jonas/Library/Application Support/Mendeley Desktop/Downloaded/Polli - 2005 - Atmospherics Weather Works Data Spatialized Meteorological Sonification Project.pdf:pdf},
+	Journal = {Leonardo},
+	Number = {1},
+	Pages = {31--36},
+	Title = {{Atmospherics / Weather Works : Data Spatialized Meteorological Sonification Project}},
+	Volume = {38},
+	Year = {2005}}
+
 @article{Sturm2005,
-author = {Sturm, BL},
-file = {:Users/Jonas/Library/Application Support/Mendeley Desktop/Downloaded/Sturm - 2005 - Pulse of an Ocean Sonification of Ocean Buoy Data.pdf:pdf},
-journal = {Leonardo},
-number = {2},
-pages = {143--149},
-title = {{Pulse of an Ocean: Sonification of Ocean Buoy Data}},
-url = {http://www.mitpressjournals.org/doi/abs/10.1162/0024094053722453},
-volume = {38},
-year = {2005}
-}
+	Author = {Sturm, BL},
+	File = {:Users/Jonas/Library/Application Support/Mendeley Desktop/Downloaded/Sturm - 2005 - Pulse of an Ocean Sonification of Ocean Buoy Data.pdf:pdf},
+	Journal = {Leonardo},
+	Number = {2},
+	Pages = {143--149},
+	Title = {{Pulse of an Ocean: Sonification of Ocean Buoy Data}},
+	Url = {http://www.mitpressjournals.org/doi/abs/10.1162/0024094053722453},
+	Volume = {38},
+	Year = {2005},
+	Bdsk-Url-1 = {http://www.mitpressjournals.org/doi/abs/10.1162/0024094053722453}}
+
 @article{Collins2006,
-author = {Collins, N},
-file = {:Users/Jonas/Documents/Papers/Collins/Leonardo Music Journal/Collins - 2006 - Noises Off Sound Beyond music.pdf:pdf},
-journal = {Leonardo Music Journal},
-pages = {7--8},
-title = {{Noises Off: Sound Beyond music}},
-volume = {16},
-year = {2006}
-}
+	Author = {Collins, N},
+	File = {:Users/Jonas/Documents/Papers/Collins/Leonardo Music Journal/Collins - 2006 - Noises Off Sound Beyond music.pdf:pdf},
+	Journal = {Leonardo Music Journal},
+	Pages = {7--8},
+	Title = {{Noises Off: Sound Beyond music}},
+	Volume = {16},
+	Year = {2006}}
+
 @article{Barrass2006,
-author = {Barrass, Stephen and Whitelaw, M and Bailes, F},
-file = {:Users/Jonas/Documents/Papers/Barrass, Whitelaw, Bailes/Leonardo Music Journal/Barrass, Whitelaw, Bailes - 2006 - Listening to the Mind Listening An Analysis of Sonification Reviews, Designs and Correspondences.pdf:pdf},
-journal = {Leonardo Music Journal},
-number = {2006},
-pages = {13--19},
-title = {{Listening to the Mind Listening: An Analysis of Sonification Reviews, Designs and Correspondences}},
-url = {http://www.mitpressjournals.org/doi/abs/10.1162/lmj.2006.16.13},
-volume = {16},
-year = {2006}
-}
+	Author = {Barrass, Stephen and Whitelaw, M and Bailes, F},
+	File = {:Users/Jonas/Documents/Papers/Barrass, Whitelaw, Bailes/Leonardo Music Journal/Barrass, Whitelaw, Bailes - 2006 - Listening to the Mind Listening An Analysis of Sonification Reviews, Designs and Correspondences.pdf:pdf},
+	Journal = {Leonardo Music Journal},
+	Number = {2006},
+	Pages = {13--19},
+	Title = {{Listening to the Mind Listening: An Analysis of Sonification Reviews, Designs and Correspondences}},
+	Url = {http://www.mitpressjournals.org/doi/abs/10.1162/lmj.2006.16.13},
+	Volume = {16},
+	Year = {2006},
+	Bdsk-Url-1 = {http://www.mitpressjournals.org/doi/abs/10.1162/lmj.2006.16.13}}
+
 @article{Polli2006,
-author = {Polli, A},
-file = {:Users/Jonas/Library/Application Support/Mendeley Desktop/Downloaded/Polli - 2006 - Heat and the Heartbeat of the City Sonifying Data Describing Climate Change.pdf:pdf},
-journal = {Leonardo Music Journal},
-pages = {44--45},
-title = {{Heat and the Heartbeat of the City : Sonifying Data Describing Climate Change}},
-volume = {16},
-year = {2006}
-}
+	Author = {Polli, A},
+	File = {:Users/Jonas/Library/Application Support/Mendeley Desktop/Downloaded/Polli - 2006 - Heat and the Heartbeat of the City Sonifying Data Describing Climate Change.pdf:pdf},
+	Journal = {Leonardo Music Journal},
+	Pages = {44--45},
+	Title = {{Heat and the Heartbeat of the City : Sonifying Data Describing Climate Change}},
+	Volume = {16},
+	Year = {2006}}
+
 @article{Weinberg2006,
-author = {Weinberg, G and Thatcher, T},
-file = {:Users/Jonas/Library/Application Support/Mendeley Desktop/Downloaded/Weinberg, Thatcher - 2006 - Interactive Sonification Aesthetics , Functionality and Performance.pdf:pdf},
-journal = {Leonardo Music Journal},
-number = {2006},
-pages = {9--12},
-title = {{Interactive Sonification : Aesthetics , Functionality and Performance}},
-volume = {16},
-year = {2006}
-}
+	Author = {Weinberg, G and Thatcher, T},
+	File = {:Users/Jonas/Library/Application Support/Mendeley Desktop/Downloaded/Weinberg, Thatcher - 2006 - Interactive Sonification Aesthetics , Functionality and Performance.pdf:pdf},
+	Journal = {Leonardo Music Journal},
+	Number = {2006},
+	Pages = {9--12},
+	Title = {{Interactive Sonification : Aesthetics , Functionality and Performance}},
+	Volume = {16},
+	Year = {2006}}
+
 @article{Vickers2006,
-author = {Vickers, Paul and Hogg, B},
-file = {:Users/Jonas/Library/Application Support/Mendeley Desktop/Downloaded/Vickers, Hogg - 2006 - SONIFICATION ABSTRAITE SONIFICATION CONCR ETE AN ‘ \AE STHETIC PERSPECTIVE SPACE ’ FOR CLASSIFYING AUDITORY DISPLAYS IN THE ARS MUSICA DOMAIN.pdf:pdf},
-journal = {International Conference on Auditory Display ( \ldots},
-pages = {210--216},
-title = {{Sonification Abstraite / Sonification Concr Ete : an ‘ \AE sthetic Perspective Space ’ for Classifying Auditory Displays in the Ars Musica Domain}},
-year = {2006}
-}
+	Author = {Vickers, Paul and Hogg, B},
+	File = {:Users/Jonas/Library/Application Support/Mendeley Desktop/Downloaded/Vickers, Hogg - 2006 - SONIFICATION ABSTRAITE SONIFICATION CONCR ETE AN ` \AE STHETIC PERSPECTIVE SPACE ' FOR CLASSIFYING AUDITORY DISPLAYS IN THE ARS MUSICA DOMAIN.pdf:pdf},
+	Journal = {International Conference on Auditory Display ( \ldots},
+	Pages = {210--216},
+	Title = {{Sonification Abstraite / Sonification Concr Ete : an ` \AE sthetic Perspective Space ' for Classifying Auditory Displays in the Ars Musica Domain}},
+	Year = {2006}}
+
 @article{Bodle2006,
-author = {Bodle, C},
-file = {:Users/Jonas/Documents/Papers/Bodle/Leonardo Music Journal/Bodle - 2006 - Sonification Listening Up.pdf:pdf},
-journal = {Leonardo Music Journal},
-number = {2006},
-pages = {51--52},
-title = {{Sonification / Listening Up}},
-url = {http://www.mitpressjournals.org/doi/abs/10.1162/lmj.2006.16.51},
-volume = {16},
-year = {2006}
-}
+	Author = {Bodle, C},
+	File = {:Users/Jonas/Documents/Papers/Bodle/Leonardo Music Journal/Bodle - 2006 - Sonification Listening Up.pdf:pdf},
+	Journal = {Leonardo Music Journal},
+	Number = {2006},
+	Pages = {51--52},
+	Title = {{Sonification / Listening Up}},
+	Url = {http://www.mitpressjournals.org/doi/abs/10.1162/lmj.2006.16.51},
+	Volume = {16},
+	Year = {2006},
+	Bdsk-Url-1 = {http://www.mitpressjournals.org/doi/abs/10.1162/lmj.2006.16.51}}
+
 @book{Knoll2010,
-author = {Knoll, GF},
-file = {:Users/Jonas/Documents/Papers/Knoll/Unknown/Knoll - 2000 - Radiation Detection and Measurement, Third edition.pdf:pdf},
-title = {{Radiation Detection and Measurement}},
-year = {2010}
-}
+	Author = {Knoll, GF},
+	File = {:Users/Jonas/Documents/Papers/Knoll/Unknown/Knoll - 2000 - Radiation Detection and Measurement, Third edition.pdf:pdf},
+	Title = {{Radiation Detection and Measurement}},
+	Year = {2010}}
+
 @misc{Chinen2010,
-author = {Chinen, Michael},
-title = {{FuckingWebBrowser}},
-url = {http://michaelchinen.com/fuckingwebbrowser/},
-urldate = {March 23, 2013},
-year = {2010}
-}
+	Author = {Chinen, Michael},
+	Title = {{FuckingWebBrowser}},
+	Url = {http://michaelchinen.com/fuckingwebbrowser/},
+	Urldate = {March 23, 2013},
+	Year = {2010},
+	Bdsk-Url-1 = {http://michaelchinen.com/fuckingwebbrowser/}}
+
 @misc{Chinen2010a,
-author = {Chinen, Michael},
-title = {{Listen to your computer: lstn}},
-url = {http://michaelchinen.com/2010/12/09/listen-to-your-computer-lstn/},
-urldate = {March 23, 2013},
-year = {2010}
-}
+	Author = {Chinen, Michael},
+	Title = {{Listen to your computer: lstn}},
+	Url = {http://michaelchinen.com/2010/12/09/listen-to-your-computer-lstn/},
+	Urldate = {March 23, 2013},
+	Year = {2010},
+	Bdsk-Url-1 = {http://michaelchinen.com/2010/12/09/listen-to-your-computer-lstn/}}
+
 @book{Hermann2011,
-author = {Hermann, T and Hunt, A and Neuhoff, JG},
-file = {:Users/Jonas/Documents/Papers/Hermann, Hunt, Neuhoff/Unknown/Hermann, Hunt, Neuhoff - 2011 - The Sonification Handbook.pdf:pdf},
-isbn = {9783832528195},
-title = {{The Sonification Handbook}},
-year = {2011}
-}
+	Author = {Hermann, T and Hunt, A and Neuhoff, JG},
+	File = {:Users/Jonas/Documents/Papers/Hermann, Hunt, Neuhoff/Unknown/Hermann, Hunt, Neuhoff - 2011 - The Sonification Handbook.pdf:pdf},
+	Isbn = {9783832528195},
+	Title = {{The Sonification Handbook}},
+	Year = {2011}}
+
 @article{Pallavi2012,
-author = {Pallavi, Asrodia and Hemlata, Patel},
-file = {:Users/Jonas/Library/Application Support/Mendeley Desktop/Downloaded/Pallavi, Hemlata - 2012 - Network Traffic Analysis Using Packet Sniffer.pdf:pdf},
-journal = {International Journal of Engineering Research and Applications},
-keywords = {- packet capture,berkeley packet filter,libpcap,network analyzer,network monitoring,nic,packet,promiscuous mode,traffic analysis},
-number = {3},
-pages = {854--856},
-title = {{Network Traffic Analysis Using Packet Sniffer}},
-volume = {2},
-year = {2012}
-}
+	Author = {Pallavi, Asrodia and Hemlata, Patel},
+	File = {:Users/Jonas/Library/Application Support/Mendeley Desktop/Downloaded/Pallavi, Hemlata - 2012 - Network Traffic Analysis Using Packet Sniffer.pdf:pdf},
+	Journal = {International Journal of Engineering Research and Applications},
+	Keywords = {- packet capture,berkeley packet filter,libpcap,network analyzer,network monitoring,nic,packet,promiscuous mode,traffic analysis},
+	Number = {3},
+	Pages = {854--856},
+	Title = {{Network Traffic Analysis Using Packet Sniffer}},
+	Volume = {2},
+	Year = {2012}}
+
 @article{Nikolaidis2012,
-author = {Nikolaidis, Ryan and Walker, Bruce and Weinberg, Gil},
-file = {:Users/Jonas/Library/Application Support/Mendeley Desktop/Downloaded/Nikolaidis, Walker, Weinberg - 2012 - Generative musical tension modeling and its application to dynamic sonification.pdf:pdf},
-journal = {Computer Music Journal},
-pages = {55--64},
-title = {{Generative musical tension modeling and its application to dynamic sonification}},
-url = {http://www.mitpressjournals.org/doi/abs/10.1162/COMJ\_a\_00105},
-year = {2012}
-}
+	Author = {Nikolaidis, Ryan and Walker, Bruce and Weinberg, Gil},
+	File = {:Users/Jonas/Library/Application Support/Mendeley Desktop/Downloaded/Nikolaidis, Walker, Weinberg - 2012 - Generative musical tension modeling and its application to dynamic sonification.pdf:pdf},
+	Journal = {Computer Music Journal},
+	Pages = {55--64},
+	Title = {{Generative musical tension modeling and its application to dynamic sonification}},
+	Url = {http://www.mitpressjournals.org/doi/abs/10.1162/COMJ\_a\_00105},
+	Year = {2012},
+	Bdsk-Url-1 = {http://www.mitpressjournals.org/doi/abs/10.1162/COMJ%5C_a%5C_00105}}
+
 @article{Gibson2012,
-author = {Gibson, John},
-file = {:Users/Jonas/Documents/Papers/Gibson/Leonardo Music Journal/Gibson - 2012 - sLowlife Sonification of Plant Study Data.pdf:pdf},
-journal = {Leonardo Music Journal},
-number = {2006},
-pages = {42--44},
-title = {{sLowlife: Sonification of Plant Study Data}},
-volume = {16},
-year = {2012}
-}
+	Author = {Gibson, John},
+	File = {:Users/Jonas/Documents/Papers/Gibson/Leonardo Music Journal/Gibson - 2012 - sLowlife Sonification of Plant Study Data.pdf:pdf},
+	Journal = {Leonardo Music Journal},
+	Number = {2006},
+	Pages = {42--44},
+	Title = {{sLowlife: Sonification of Plant Study Data}},
+	Volume = {16},
+	Year = {2012}}
+
 @misc{Miyazaki2012,
-author = {Miyazaki, Shintaro},
-title = {{Shintaro Miyazaki}},
-url = {http://www.algorhythmics.com/persons/miyazaki/},
-urldate = {March 23, 2013},
-year = {2012}
-}
+	Author = {Miyazaki, Shintaro},
+	Title = {{Shintaro Miyazaki}},
+	Url = {http://www.algorhythmics.com/persons/miyazaki/},
+	Urldate = {March 23, 2013},
+	Year = {2012},
+	Bdsk-Url-1 = {http://www.algorhythmics.com/persons/miyazaki/}}
+
 @misc{802,
-booktitle = {Wikipedia},
-title = {{IEEE 802.11}},
-url = {http://en.wikipedia.org/wiki/IEEE\_802.11},
-urldate = {March 23, 2013}
-}
+	Booktitle = {Wikipedia},
+	Title = {{IEEE 802.11}},
+	Url = {http://en.wikipedia.org/wiki/IEEE\_802.11},
+	Urldate = {March 23, 2013},
+	Bdsk-Url-1 = {http://en.wikipedia.org/wiki/IEEE%5C_802.11}}
+
 @misc{detektors,
-title = {{Detektors}},
-urldate = {March 23, 2013},
-year = {2010}
-}
+	Title = {{Detektors}},
+	Urldate = {March 23, 2013},
+	Year = {2010}}
+
+@comment{BibDesk Static Groups{
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<plist version="1.0">
+<array>
+	<dict>
+		<key>group name</key>
+		<string>Thesis</string>
+		<key>keys</key>
+		<string>Barrass2006,Ballora2004,Chinen2010,Nikolaidis2012,Francisco2003,Chinen2010a,Polli2005a,Ben-Tal2004,Pallavi2012,Miyazaki2012,Polli2006,Sturm2005,Gibson2012,detektors,Weinberg2006,Collins2006,802,Vickers2006,Fitch,Knoll2010,Hermann2011,Bodle2006</string>
+	</dict>
+</array>
+</plist>
+}}
