--- a/general.bib
+++ b/general.bib
@@ -2,12 +2,77 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jonas Gruska at 2013-04-09 15:12:05 +0200 
+%% Created for Jonas Gruska at 2013-05-01 12:55:41 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@url{ChKubisch2012,
+	Author = {Orens, Geoff},
+	Date-Added = {2013-05-01 10:44:45 +0000},
+	Date-Modified = {2013-05-01 10:49:11 +0000},
+	Lastchecked = {May 1, 2013},
+	Title = {{C}hristina {K}ubisch},
+	Url = {http://www.allmusic.com/artist/christina-kubisch-mn0000048852},
+	Urldate = {May 1, 2013},
+	Year = {2013}}
+
+@url{mchinen,
+	Author = {Chinen, Michael},
+	Date-Added = {2013-05-01 10:12:23 +0000},
+	Date-Modified = {2013-05-01 10:34:20 +0000},
+	Lastchecked = {March 23, 2013},
+	Title = {{M}ichael {C}hinen},
+	Url = {http://michaelchinen.com},
+	Urldate = {March 23, 2013},
+	Year = {2013},
+	Bdsk-Url-1 = {http://michaelchinen.com}}
+
+@book{Hermann2011,
+	Address = {Berlin},
+	Annote = {LDR    01362cam  22003855a 4500
+001    17129458
+005    20130328132514.0
+008    120116s2011    gw a     bf   001 0 eng d
+906    $a0$bibc$ccopycat$d3$encip$f20$gy-gencatlg
+923    $d20120116$n0263683$sGyWOH
+925 0  $aacquire$b1 shelf copy$xpolicy default
+955    $bfd08 2013-03-21 z-processor$afd21 2013-03-28 to Music Div.
+010    $a  2011525563
+020    $a9783832528195 (pbk.)
+020    $a3832528199 (pbk.)
+035    $a(OCoLC)ocn771999159
+040    $aOHX$cOHX$dZCU$dVA@$dDLC
+042    $alccopycat
+072  7 $aTK$2lcco
+072  7 $aBF$2lcco
+072  7 $aML$2lcco
+097 00 $aMT723$b.S656 2011
+245 04 $aThe sonification handbook /$cThomas Hermann, Andy Hunt, John G. Neuhoff (eds.).
+260    $aBerlin :$bLogos Verlag,$c2011.
+300    $axiv, 564 p. :$bill. ;$c25 cm.
+504    $aIncludes bibliographical references and index.
+650  0 $aComputer sound processing$vHandbooks, manuals, etc.
+650  0 $aPsychoacoustics$vHandbooks, manuals, etc.
+650  0 $aAuditory perception$vHandbooks, manuals, etc.
+650  0 $aSound$xRecording and reproducing$xDigital techniques$vHandbooks, manuals, etc.
+700 1  $aHermann, Thomas.
+700 1  $aHunt, Andy,$d1965-
+700 1  $aNeuhoff, John G.
+955    $bfd09 2012-2-13
+985    $eVENDOR LOAD
+},
+	Author = {Hermann, Thomas and Hunt, Andy and Neuhoff, John G},
+	Date-Added = {2013-05-01 09:51:59 +0000},
+	Date-Modified = {2013-05-01 09:55:45 +0000},
+	Genre = {Computer sound processing},
+	Isbn = {9783832528195 (pbk.)},
+	Library-Id = {2011525563},
+	Publisher = {Logos Verlag},
+	Title = {The sonification handbook},
+	Year = {2011}}
 
 @misc{Fitch,
 	Author = {Kramer, Gregory and Walker, Bruce and Bonebright, Terri and Cook, Perry and Flowers, John and Miner, Nadine and Neuhoff, John},
@@ -152,13 +217,6 @@
 	Year = {2010},
 	Bdsk-Url-1 = {http://michaelchinen.com/2010/12/09/listen-to-your-computer-lstn/}}
 
-@book{Hermann2011,
-	Author = {Hermann, T and Hunt, A and Neuhoff, JG},
-	File = {:Users/Jonas/Documents/Papers/Hermann, Hunt, Neuhoff/Unknown/Hermann, Hunt, Neuhoff - 2011 - The Sonification Handbook.pdf:pdf},
-	Isbn = {9783832528195},
-	Title = {{The Sonification Handbook}},
-	Year = {2011}}
-
 @article{Pallavi2012,
 	Author = {Pallavi, Asrodia and Hemlata, Patel},
 	File = {:Users/Jonas/Library/Application Support/Mendeley Desktop/Downloaded/Pallavi, Hemlata - 2012 - Network Traffic Analysis Using Packet Sniffer.pdf:pdf},
@@ -190,9 +248,10 @@
 	Volume = {16},
 	Year = {2012}}
 
-@misc{Miyazaki2012,
+@url{Miyazaki2012,
 	Author = {Miyazaki, Shintaro},
-	Title = {{Shintaro Miyazaki}},
+	Date-Modified = {2013-05-01 10:33:27 +0000},
+	Title = {{S}hintaro {M}iyazaki},
 	Url = {http://www.algorhythmics.com/persons/miyazaki/},
 	Urldate = {March 23, 2013},
 	Year = {2012},
@@ -219,7 +278,7 @@
 		<key>group name</key>
 		<string>Thesis</string>
 		<key>keys</key>
-		<string>Barrass2006,Ballora2004,Chinen2010,Nikolaidis2012,Francisco2003,Chinen2010a,Polli2005a,Ben-Tal2004,Pallavi2012,Miyazaki2012,Polli2006,Sturm2005,Gibson2012,detektors,Weinberg2006,Collins2006,802,Vickers2006,Fitch,Knoll2010,Hermann2011,Bodle2006</string>
+		<string>Barrass2006,Ballora2004,Chinen2010,Nikolaidis2012,Francisco2003,Chinen2010a,Polli2005a,Ben-Tal2004,Pallavi2012,Miyazaki2012,ChKubisch2012,Polli2006,Sturm2005,Gibson2012,detektors,Weinberg2006,Collins2006,802,Vickers2006,Fitch,mchinen,Knoll2010,Hermann2011,Bodle2006</string>
 	</dict>
 </array>
 </plist>
