--- a/Thesis.tex
+++ b/Thesis.tex
@@ -1,7 +1,12 @@
 \documentclass[12pt,a4paper,oneside]{report} 
-%\documentclass[a5paper,oneside]{memoir}
+%\documentclass[14pt,a5paper,oneside]{memoir}
+%\setlrmarginsandblock{1cm}{1cm}{*}
+%\setulmarginsandblock{1cm}{1cm}{*}
+%\checkandfixthelayout
+
 \usepackage[utf8]{inputenc} 
-\usepackage{apacite} 
+\usepackage{hyperref}
+\usepackage{apacite}
 \usepackage{cmap} 
 \usepackage{url}
 \usepackage[T1]{fontenc} 
@@ -10,7 +15,7 @@
 %\PassOptionsToPackage{scaled=0.75}{beramono}
 \usepackage[parfill]{parskip} 
 
-\usepackage{hyperref}
+
 \usepackage{graphicx}
 \usepackage{float}
 \usepackage{setspace}
@@ -46,7 +51,7 @@ Institute of Sonology}
 
 
 \chapter*{Acknowledgements}
-I would like to thank my parents for supporting me during my studies. I would never be able to learn what I love without them. And of course, I would like to thank my mentor Paul Berg for his patience with my chaotic behavior and the whole Institute of Sonology for helping me to become who I want to be. Last, I would like to thank Marko Uzunovski, Xavier De Wannemaeker, Maya Verlaak, Daniel Tóth, Peter Sych, Marek Chołoniewski and all my other friends in supporting me in my work, inspiring and pushing me forward.
+I would like to thank my parents for supporting me during my studies. I would never be able to learn what I love without them. And of course, I would like to thank my mentor Paul Berg for his patience with my chaotic behavior and the whole Institute of Sonology for helping me to become who I want to be. Last, I would like to thank Janka Kobolková, Marko Uzunovski, Xavier De Wannemaeker, Maya Verlaak, Daniel Tóth, Peter Sych, Marek Chołoniewski and all my other friends in supporting me in my work, inspiring and pushing me forward.
 
 \setcounter{tocdepth}{1}
 \tableofcontents
@@ -54,11 +59,15 @@ I would like to thank my parents for supporting me during my studies. I would ne
 
 \chapter{Introduction}
 
-In my thesis, I am trying to achieve few things. In first chapter, it is mainly about presenting a context of sonification and effort to define artistic approaches to this method. In those cases, form of auditory display is rather secondary and what comes in front is sometimes much more interesting - aesthetically or politically. 
+My work has never been turning around a single topic, yet there are connecting traits in all of it. \emph{Streams and Currents}, as in streams of data versus electric currents can be one of those traits. My passion for pure informational flow surrounding us in various forms is more than hinted in many of the topics I describe.
 
-I describe devices which allow us to sonificate \textit{in situ}, the ones with scientific goal and those with purely aesthetic approach.
+Sonification has grabbed my interest since my first experiments with programming computer music. By the time of my first contacts with the method, I was amazed by the possibilities presented by softwares such as Pure Data, where one could easily turn data-flows into their sonic representations. Using external streams as sources of inspiration seemed very rewarding, in terms of conceptual and practical realization. Not surprisingly, the method stick with me for some time.
 
-In last chapter I describe few of the most important projects I have worked on during years at Sonology (2009-2013), which should work as a silent definition of what my artistic approach is. This appears to be a problem, since my attitudes and work modes change far too often to create one coherent artistic style.
+This is the reason why I have chosen topics of sonification as a key element to my thesis - it serves as one of the main inspirations to many of my works in various degrees. In next chapters, I will try to describe the context of my work with few significant examples and comparisons from the art world and the world of science, to give you a better idea where my ideas have started. My effort will also contain an attempt to distinguish two separate traits in approaches towards sonification, relevant for sonological context, and I will try to give an overview of devices which allow us to sonificate \textit{in situ}, the ones with scientific goal and those with purely aesthetic use.
+
+After the topics of sonification, I will describe few of the most important projects I have worked on during years at Sonology (2009-2013), which should help to define my artistic approach in examples. This approach might not appear coherent at first, but one might notice that my work always shares specific qualities. Passion for technology, which is often present but not visible, love for sound as a pure physical vibration of the air and effort to turn invisible to audible.
+
+This specific style of work is not something I have been developing consciously, one could say it came more from within. I am drawn towards technology since I was a child, spending endless hours in front of the flickering screens and lately in cloud of soldering fumes. But technology by itself does not satisfy me, I am trying to see beyond engineering, through the streams of electrons. Because my intrinsic power is sound. But I need bits and volts to reach it.
 
 \chapter{Sonification and audification experiments}
 
@@ -66,24 +75,19 @@ In last chapter I describe few of the most important projects I have worked on d
 
 % What is this chapter gonna be about
 
-Topic of sonification is intriguing for few reasons. First of them could be, that it benefits from interest of various groups of people - scientists: biologists, mathematicians, creatives: musicians, sound artists and general public. Another is a belief, that this topic still has a lot of unrevealed potential. I will try to discuss this clash between scientific and artistic approach, various significant projects or artworks, as well as fields of opportunity blossoming from this duality.
+Topic of sonification is intriguing for few reasons. Firstly, it benefits from interest of various groups of people - scientists: biologists, mathematicians, creatives: musicians, sound artists and general public. Another is a belief, that this topic still has a lot of unrevealed potential. I will try to discuss this clash between scientific and artistic approach, various significant projects or artworks, as well as fields of opportunity blossoming from this duality.
 
 % Sonification definition
-Main understanding of the term \emph{sonification} is the \emph{``use of non-speech audio to convey information''}, or more precisely, it is the \emph{``transformation of data relations into perceived relations in an acoustic signal for the purposes of facilitating communication or interpretation''} \cite{Fitch}. These are definitions from probably the most relevant place to sonificication - International Community for Auditory Display, which organizes conferences and publishes books on the topic since 1992.
+Main understanding of the term \emph{sonification} is the \emph{``use of non-speech audio to convey information''}, or more precisely, it is the \emph{``transformation of data relations into perceived relations in an acoustic signal for the purposes of facilitating communication or interpretation''} \cite{Fitch}. These are definitions from probably the most relevant place to sonificication - International Community for Auditory Display, which organizes conferences and publishes books on the topic since 1992. Nicolas Collins puts it less formally, as a method for one to provide \emph{``aural alternatives to pie charts, line graphs and spreadsheets''} \cite{Collins2006}. All these quotations define it as an analytical, representative point of view, and the reasoning behind the use of the sonification in this sense is repositioning of the information from traditional semantic, visual or statistic level to sonic level giving ground to non-traditional data analysis via medium of sound or music. Interestingly, ICAD's first definition mentioning conveying \emph{information} rather than data can also give an understanding that sonification is not only about data patterns; and whether we try to sonify weather forecast, biological systems or our emotions is not important - they are all qualified.
 
-%That is a definition made by ICAD (International Community for Auditory Display), which is one of the main research organizations in the field organizing annual International Conference for Auditory Display.
-Nicolas Collins puts it less formally, as a method for one to provide \emph{``aural alternatives to pie charts, line graphs and spreadsheets''} \cite{Collins2006}. All these quotations define it as an analytical, representative point of view, and the reasoning behind the use of sonification in this sense is repositioning of the information from traditional semantic, visual or statistic level to sonic level giving ground to non-traditional data analysis via medium of sound or music. Interestingly, ICAD's first definition mentioning conveying \emph{information} rather than data can also give an understanding that sonification is not only about data patterns; and whether we try to sonify weather forecast, biological systems or our emotions is secondary.
-
-I believe the analytical approach towards sonification is rather clear and well defined. Books such as Sonification Handbook prove that ICAD and its fellow researchers have done exquisite work in examining of the topic from various points, resulting in apparatus allowing us, artists to built upon. Although arts and sciences have many things in common, it happens so that aesthetic approaches toward sonification projects are in my opinion quite different.
+I believe the analytical approach towards sonification is rather clear and well defined. Books such as Sonification Handbook \cite{Hermann2011} prove that ICAD and its fellow researchers have done exquisite work in examining of the topic from various points, resulting in apparatus allowing us, artists to built upon. Although arts and sciences have many things in common, it happens so that aesthetic approaches toward sonification projects are in my opinion quite different.
 
 %Some scientists residing on the analytical side are concerned with addition of music grammar and finesse, because it might get in the way of the data representation, \emph{``the music would be another language to learn''} \cite{Vickers2006}.
 
 % Division proposal
-That is why I would like to propose a division in this definition. There is one part of sonification world, described above - that is an analytical, `auditory display' stand. My proposition adds \emph{an artistic stand}, where the main goal of the process is not to make certain data accessible for aural analysis, but rather to use those data as a essence of specific aesthetics. That means, one is no more looking for an scientific tool, but on a sonic instrument, source of inspiration and compositional data. It might as well be described as a matter of aim behind the use of sonification methods in his work: whether works are aimed to inform a listener or provide him and auditory display of some data, or sonification is used for its characteristic aesthetics.
+That is why I would like to propose a division in this definition. There is one part of sonification world, described above - that is an analytical, `auditory display' world. My proposition adds \emph{an artistic world}, where the main goal of the process is not to make certain data accessible for aural analysis, but rather to use those data as a essence of specific aesthetics. That means, one is no more looking for a scientific tool, but on a sonic instrument, source of inspiration and compositional data. It might as well be described as a matter of aim behind the use of sonification methods in his work: whether works are aimed to inform a listener or provide him an auditory display of some data, or the sonification is used for its characteristic aesthetics.
 
-Use of streams of data for compositional and sound generating purposes is very familiar to electro-acoustic composers, artists and performers. Sonification in artistic stand is pushing the idea a little further - instead of algorithms, `real world' data are used, although reaching their exact, understandable representation becomes additional or even insignificant rather than essential. It might be, that there is deeper meaning behind the selection of the data stream (when artist sees the action as political act).
-
-Of course, real world examples are varying quite a bit and sometimes even overlap both approaches toward sonification, as will be described in following lines.
+Use of streams of data for compositional and sound generating purposes is very familiar to electro-acoustic composers, artists and performers. Sonification in artistic view is pushing the idea little further - instead of algorithms, \emph{real world} data are used, although reaching their exact, understandable representation becomes additional or even insignificant, rather than essential. It might be, that there is deeper meaning behind the selection of the data stream (when artist sees the action as political act), so it is important that the point I am describing is more theoretical - real works are more often combining certain degree of aesthetics with conveying information through sound.
 %Benefits of sonification\\
 %- pattern substraction\\
 %- abilitity to filter in frequency domain\\
@@ -96,7 +100,7 @@ Of course, real world examples are varying quite a bit and sometimes even overla
 
 %SNIPPETS:\\*
 
-I would like to point out few significant works which use sonification as its main concept or method, and while doing so, I will try to exercise my proposal for the new sonification definition division.
+To give some real world examples, I would like to point out few significant works which use sonification as its main concept or method, and while doing so, I will try to exercise my proposal for the new sonification definition division.
 
 One of the most classic examples of sonification is \emph{Geiger} (or \emph{Geiger–Müller}) \emph{counter}, particle detector measuring ionizing radiation. Method of display of the information is use of pulses - representations of electrical charges (and consequential discharges) of the inert gas in the Geiger–Müller tube caused by particles or photons of radiation. Higher amount of electrical discharges (being higher amount of audio pulses coming from speakers) is signaling greater density of particles of radiation, thus higher radiation in the environment \cite{Knoll2010}. Geiger counter is clearly a \emph{analytic} sonification tool, with its main purpose being representation of certain information, rather than using the information as an artistic basis.
 
@@ -106,11 +110,11 @@ Geiger counter can be also viewed as representation of sub-method of sonificatio
 
 Audification is sonification simplified to most basic level. Most of the common real-time sonifications are than audifications as well, e.g.\ listening to the whale songs or bat echolocation, where the only transformations which happens between the data is change of playback speed.
 
-One of the most interesting sonification works is work of Christina Kubisch\footnote{I have chosen Christina Kubisch as a icon of a method, but there is a wider spectrum of artists using the same tools.}. Kubisch is focusing on audification of electromagnetic fields with the use of induction coils, headphone amplifiers and headphones. This works as a nice example of artistic audification, where the purpose seems to be in finding of interesting sounds within the world of electromagnetic fields rather than scientific analysis. 
+One of the most interesting sonification works is work of Christina Kubisch \cite{ChKubisch2012}. I have chosen her as an icon of electromagnetic induction a method, but there is a wider spectrum of artists using the same tools. Kubisch is German sound artist born in 1948. She studied classical instruments such as flute and piano, but have later turned to studying electronics at Technical Institute of Milan. Since than she has created various sound installations, usually combining electronics and delicate sounds. In a work I would like to mention - Electrical Walks, Kubisch is focusing on audification of electromagnetic fields with the use of induction coils, headphone amplifiers and headphones. This works as a nice example of artistic audification, where the purpose seems to be in finding of interesting sounds within the world of electromagnetic fields rather than scientific analysis. 
 
-Induction coils are acting as antennas and natural amplifiers, filters, which when in right setting, can provide excellent tools for electromagnetic sensing. AC oscillations of the electromagnetic field are inducted on the coil, thusly creating AC current. This AC current is than amplified and can be directly used with any audio devices.
+Induction coils are acting as antennas and natural amplifiers, filters, which when in right setting, can provide excellent tools for electromagnetic sensing. Alternating current (AC) oscillations of the electromagnetic field are inducted on the coil, thusly creating AC signal. This AC signal is than amplified and can be directly treated with any audio devices as sound. It is an oscillation, comparable to signal produced by oscillators.
 
-I have designed a simple pocket amplifier for this purposes called \textbf{Eletrosluch} (see ~\ref{fig:elektrosluch}). This device provides 100x gain for the coils and is powerful enough to drive headphones. Its main benefit is the size and portability, ideal for electromagnetic sonic explorations. The version 1.0 (on the picture) used tape head which I have extracted from old tape player as induction coil. Amplifying circuit was based around LM386 amplifier, which I have replaced in v1.1 with low-noise operational amplifier TL071. Tape heads have been replaced with \emph{pick-up coils}, which were, while attached with its suction cup to telephone headset, used for noise-less recordings of telephone calls in previous century. 
+I have designed a simple pocket amplifier for this purposes called \textbf{Eletrosluch} (see fig.  ~\ref{fig:elektrosluch}). This device provides 100x gain for the coils and it is powerful enough to drive headphones. Its main benefit is the size and portability, ideal for an electromagnetic sonic explorations. The version 1.0 (on the ~\ref{fig:elektrosluch}) used tape head which I have extracted from old tape player as induction coil. Amplifying circuit was based around LM386 amplifier, which I have replaced in v1.1 with low-noise operational amplifier TL071. Tape heads have been replaced with \emph{pick-up coils}, which were in previous century, while attached with its suction cup to telephone headset, used for noise-less recordings of telephone calls. 
 
 \begin{figure}  
   \centering
@@ -119,9 +123,9 @@ I have designed a simple pocket amplifier for this purposes called \textbf{Eletr
 	\label{fig:elektrosluch}
 \end{figure}
 
-Probably closest to my network sonificiation work is the one by Michael Chinen\footnote{\url{http://michaelchinen.com}/} and Shintaro Miyazaki's Institute for Algorhytmics\footnote{\url{http://www.algorhythmics.com/en/}}. 
+Probably closest to my network sonificiation work is the one by Michael Chinen  and Shintaro Miyazaki's Institute for Algorhytmics. 
 
-Michael Chinen is an Dartmouth College graduate, sound artist and one of the developers of popular open source audio editing software Audacity. His artistic focus resides in software sonification, in sense of method as in sense of target. Prove to this claim are his works \textbf{lstn} and \textbf{FuckingWebBrowser}, which I will now try to examine in greater detail. 
+Michael Takezo Chinen is an American programer. He studied computer science and composition at University of Washington, Tokyo Denki University and Dartmouth College with Richard Karpen, Charles Dodge and Naotoshi Osaka. He was part of the developers of popular open source audio editing software Audacity. His artistic focus resides in software sonification, in sense of method as in sense of target. Prove to this claim are his works \textbf{lstn} and \textbf{FuckingWebBrowser}, which I will now try to examine in greater detail. \cite{mchinen}
 
 Both \emph{lstn} and \emph{FuckingWebBrowser} are based around sonification of computer based streams and data. To be more precise, lstn is \emph{``a program that sonifies real-time debugging data of other programs''} and FuckingWebBrowser is \emph{``simple mac web browser with memory sonification based on WebKit''} \cite{Chinen2010, Chinen2010a}.
 
@@ -131,7 +135,7 @@ Chinen makes an excellent point for artistic stand towards sonification. Aim tow
 
 His work is representative and direct, yet its main point its not to convey information. Auditory display becomes `useless' from scientific or research point of view and becomes interesting as an artwork for its specific aesthetics.
 
-Chinen's work has been strongly connected to Institute for Algorhytmics, led by Shintaro Miyazaki\footnote{\url{http://www.algorhythmics.com/persons/miyazaki/}}. He is a post-doctoral researcher at Humboldt University in Berlin dealing with \emph{``epistemology, archeology, history and theory of everyday technologies, which store, transmit and process informations and their dynamic relation to sound, rhythms and other sorts of time-varying signals.''} \cite{Miyazaki2012}. From his projects, I want to point out his collaboration with Martin Howse\footnote{\url{http://www.1010.co.uk/}} called \textbf{Detektors}\footnote{\url{http://detektors.org}}.
+Chinen's work has been strongly connected to Institute for Algorhytmics, led by Shintaro Miyazaki. He is a post-doctoral researcher at Humboldt University in Berlin dealing with \emph{``epistemology, archeology, history and theory of everyday technologies, which store, transmit and process informations and their dynamic relation to sound, rhythms and other sorts of time-varying signals.''} \cite{Miyazaki2012}. From his projects, I want to point out his collaboration with Martin Howse\footnote{\url{http://www.1010.co.uk/}} called \textbf{Detektors}\footnote{\url{http://detektors.org}}.
 
 Detektors is \emph{``an open, collaborative project which uses sonic strategies and DIY-devices to make audible the hidden infoscapes of our time. The present website will show data, recordings and cartographies of different spectral ecologies and trans-sonic machinic agencements.''} \cite{detektors}. Website of the project contains many sound recordings of the electromagnetic fields (audifications) from radio-frequency range as well as cartographic information about such sources. It is a study of electromagnetic pollution, sonic behavior of digital devices in the context of geolocational sound recordings.
 
